--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "honk",
+  "name": "pine",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/honk-net/honk.js.git"
+    "url": "git+https://github.com/Pine-Chat/pine.js.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/honk-net/honk.js/issues"
+    "url": "https://github.com/Pine-Chat/pine.js/issues"
   },
-  "homepage": "https://github.com/honk-net/honk.js#readme",
-  "dependencies": {
-    "@dmmdjs/dutils": "^1.0.5"
-  },
-  "directories": {
-    "test": "test"
-  },
-  "devDependencies": {},
-  "description": ""
+  "homepage": "https://github.com/Pine-Chat/pine.js#readme"
 }
